<resources>
    <string name="app_name">Хрестики-нолики</string>
    <string name="name1">Гравець 1:</string>
    <string name="name2">Гравець 2:</string>
    <string name="start">Розпочати гру</string>
    <string name="empty">-</string>
    <string name="step">Хід гравця :</string>
    <string name="X">Хрестики ставить гравець :</string>
    <string name="zero">Нулики ставить гравець :</string>
    <string name="blue_name"></string>
    <string name="orange_name"></string>
</resources>
