<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.q.myapplication.MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/name1"
        android:textSize="30sp"

        />
    <EditText
        android:id="@+id/input_name1"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_weight="1.5"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textSize="21sp"
        android:transitionName="@string/blue_name"
        />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:text="@string/name2"
        android:textAlignment="center"
        android:textSize="30sp"
        />
        <!-- TEst1 -->
    <EditText
        android:id="@+id/input_name2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_weight="1.5"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textSize="21sp"
        android:transitionName="@string/orange_name"
        />
    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/button"
        android:gravity="center"
        android:text="@string/start"
        />
    </LinearLayout>
</RelativeLayout>

