<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.q.myapplication.Game">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
    <Button
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:id="@+id/button1"
        android:text="@string/empty"
        android:background="@drawable/border"
        />
    <Button
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:id="@+id/button2"
        android:text="@string/empty"
        android:background="@drawable/border"
        />
        <Button
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:id="@+id/button3"
            android:text="@string/empty"
            android:background="@drawable/border"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
        <Button
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:id="@+id/button4"
            android:text="@string/empty"
            android:background="@drawable/border"
            />
    <Button
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:id="@+id/button5"
        android:text="@string/empty"
        android:background="@drawable/border"
        />

    <Button
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:id="@+id/button6"
        android:text="@string/empty"
        android:background="@drawable/border"
        />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
        <Button
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:id="@+id/button7"
            android:text="@string/empty"
            android:background="@drawable/border"
            />

        <Button
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:id="@+id/button8"
            android:text="@string/empty"
            android:background="@drawable/border"
            />
    <Button
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:id="@+id/button9"
        android:text="@string/empty"
        android:background="@drawable/border"
        />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:layout_height="0dp"
        >
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/step"
            />
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:background="@color/button"
            android:textColor="@color/text_color"
            android:id="@+id/who_go"
            />
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:id="@+id/x"
        android:text="@string/X"
        />
        <EditText
            android:enabled="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:id="@+id/x_name"
            android:text=""
            android:transitionName="@string/blue_name"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/text_color"
            />
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:id="@+id/zero"
        android:text="@string/zero"
        />
    <EditText
        android:enabled="false"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:textColor="@color/text_color"
        android:transitionName="@string/orange_name"
        android:id="@+id/zero_name"
        />
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
